@@ -1,296 +1,24 @@
-2012-01-06  Jason Merrill  <jason@redhat.com>
+2010-11-25  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>
 
-	PR c++/6057
-	PR c++/48051
-	PR c++/50855
-	PR c++/51322
-	* demangle.h (enum demangle_component_type): Add
-	DEMANGLE_COMPONENT_INITIALIZER_LIST, DEMANGLE_COMPONENT_NULLARY.
-
-2011-12-19  Chung-Lin Tang  <cltang@codesourcery.com>
-
-	* elf/mips.h (elf_mips_reloc_type): Add R_MIPS16_TLS_* entries.
-
-2011-12-14  Iain Sandoe  <iains@gcc.gnu.org>
-
-	* mach-o/loader.h (bfd_mach_o_section_type): define
-	BFD_MACH_O_S_ATTR_NONE to 0.
-
-2011-11-07  Richard Henderson  <rth@redhat.com>
-
-	Merged from transactional-memory.
-
-	* demangle.h (enum gnu_v3_ctor_kinds): Add gnu_v3_object_ctor_group.
-	(enum gnu_v3_dtor_kinds): Add gnu_v3_object_dtor_group.
-	(DEMANGLE_COMPONENT_TRANSACTION_CLONE): New.
-	(DEMANGLE_COMPONENT_NONTRANSACTION_CLONE): New.
-
-2011-11-01  DJ Delorie  <dj@redhat.com>
-
-	* dis-asm.h (print_insn_rl78): Declare.
-
-2011-10-25  Joern Rennecke  <joern.rennecke@embecosm.com>
-
-	* dis-asm.h (print_insn_epiphany): Declare.
-
-2011-10-21  Ulrich Drepper  <drepper@gmail.com>
-
-	* obstack.h [!GNUC] (obstack_free): Avoid cast to int.
-
-2011-10-21  Marc Glisse  <marc.glisse@inria.fr>
-
-	* ansidecl.h (ENUM_BITFIELD): Always use enum in C++
-
-2011-10-19  Alan Modra  <amodra@gmail.com>
-
-	PR ld/13254
-	* bfdlink.h (struct bfd_link_info): Add error_textrel.
-
-2011-09-28  Doug Evans  <dje@google.com>
-
-	* timeval-utils.h: New file.
-
-	* libiberty.h (countargv): Declare.
-
-2011-09-26  Cary Coutant  <ccoutant@google.com>
-
-	gcc PR lto/47247
-	* plugin-api.h (enum ld_plugin_symbol_resolution): Add
-	LDPR_PREVAILING_DEF_IRONLY_EXP.
-	(enum ld_plugin_tag): Add LDPT_GET_SYMBOLS_V2.
-
-2011-09-23  Cary Coutant  <ccoutant@google.com>
-
-	PR 40831
-	* demangle.h (enum demangle_component_type): Add
-	DEMANGLE_COMPONENT_CLONE.
-
-2011-09-15  H.J. Lu  <hongjiu.lu@intel.com>
-
-	PR ld/12975
-	* bfdlink.h (bfd_link_info): Add version_info.
-
-2011-07-25  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
-
-	* xregex.h (regoff_t): Define.
-
-2011-07-22  Jakub Jelinek  <jakub@redhat.com>
-
-	* dwarf2.h (DW_AT_GNU_macros): New.
-	(enum dwarf_macro_record_type): New enum.  Add DW_MACRO_GNU_*.
-
-	PR c++/49756
-	* libiberty.h (stack_limit_increase): New prototype.
-
-2011-07-13  Sriraman Tallam  <tmsriram@google.com>
-
-	* plugin-api.h
-	(ld_plugin_section): New struct.
-	(ld_plugin_get_section_count): New typedef.
-	(ld_plugin_get_section_type): New typedef.
-	(ld_plugin_get_section_name): New typedef.
-	(ld_plugin_get_section_contents): New typedef.
-	(ld_plugin_update_section_order): New typedef.
-	(ld_plugin_allow_section_ordering): New typedef.
-	(LDPT_GET_SECTION_COUNT): New enum value.
-	(LDPT_GET_SECTION_TYPE): New enum value.
-	(LDPT_GET_SECTION_NAME): New enum value.
-	(LDPT_GET_SECTION_CONTENTS): New enum value.
-	(LDPT_UPDATE_SECTION_ORDER): New enum value.
-	(LDPT_ALLOW_SECTION_ORDERING): New enum value.
-	(tv_get_section_count): New struct members.
-	(tv_get_section_type): New struct members.
-	(tv_get_section_name): New struct members.
-	(tv_get_section_contents): New struct members.
-	(tv_update_section_order): New struct members.
-	(tv_allow_section_ordering): New struct members.
-
-2011-07-15  Alan Modra  <amodra@gmail.com>
-
-	* bfdlink.h (struct bfd_link_info): Use ENUM_BITFIELD for strip,
-	discard, common_skip_ar_symbols, unresolved_syms_in_objects, and
-	unresolved_syms_in_shared_libs fields.  Move emit_note_gnu_build_id
-	out of bitfields.  Reorder bitfields.
-
-2011-07-13  Sriraman Tallam  <tmsriram@google.com>
-
-	* plugin-api.h (ld_plugin_section): New struct.
-	(ld_plugin_get_section_count): New typedef.
-	(ld_plugin_get_section_type): New typedef.
-	(ld_plugin_get_section_name): New typedef.
-	(ld_plugin_get_section_contents): New typedef.
-	(ld_plugin_update_section_order): New typedef.
-	(ld_plugin_allow_section_ordering): New typedef.
-	(LDPT_GET_SECTION_COUNT): New enum value.
-	(LDPT_GET_SECTION_TYPE): New enum value.
-	(LDPT_GET_SECTION_NAME): New enum value.
-	(LDPT_GET_SECTION_CONTENTS): New enum value.
-	(LDPT_UPDATE_SECTION_ORDER): New enum value.
-	(LDPT_ALLOW_SECTION_ORDERING): New enum value.
-	(tv_get_section_count): New struct members.
-	(tv_get_section_type): New struct members.
-	(tv_get_section_name): New struct members.
-	(tv_get_section_contents): New struct members.
-	(tv_update_section_order): New struct members.
-	(tv_allow_section_ordering): New struct members.
-
-2011-07-11  Catherine Moore  <clm@codesourcery.com>
-
-	* bfdlink.h (flag_type): New enumeration.
-	(flag_info_list): New structure.
-	(flag_info): New structure.
-
-2011-07-09  H.J. Lu  <hongjiu.lu@intel.com>
-
-	PR ld/12942
-	* bfdlink.h (bfd_link_info): Add loading_lto_outputs.
-
-2011-07-01  Joel Brobecker  <brobecker@adacore.com>
-
-	* filenames.h (HAVE_CASE_INSENSITIVE_FILE_SYSTEM): Define
-	on Darwin, as well as on the systems that use a DOS-like
-	filesystem.
-
-2011-06-22  Jakub Jelinek  <jakub@redhat.com>
-
-	PR debug/47858
-	* dwarf2.h (enum dwarf_location_atom): Add DW_OP_GNU_parameter_ref.
-
-2011-06-22  Jakub Jelinek  <jakub@redhat.com>
-
-	* dwarf2.h (enum dwarf_location_atom): Add DW_OP_GNU_parameter_ref.
-
-2011-06-20  Jakub Jelinek  <jakub@redhat.com>
-
-	PR ld/12570
-	* bfdlink.h (struct bfd_link_info): Add no_ld_generated_unwind_info
-	option.
-
-2011-06-13  Jan Kratochvil  <jan.kratochvil@redhat.com>
-
-	* demangle.h (DMGL_RET_POSTFIX): Extend the comment.
-	(DMGL_RET_DROP): New.
-
-2011-06-13  Walter Lee  <walt@tilera.com>
-
-	* dis-asm.h (print_insn_tilegx): Declare.
-	(print_insn_tilepro): Likewise.
-
-2011-05-17  Alan Modra  <amodra@gmail.com>
-
-	PR ld/12760
-	* bfdlink.h (struct bfd_link_callbacks <notice>): Add "flags" and
-	"string" param.
-
-2011-05-16  Alan Modra  <amodra@gmail.com>
-
-	* bfdlink.h (struct bfd_link_hash_entry): Remove u.undef.weak field.
-
-2011-05-09  Paul Brook  <paul@codesourcery.com>
-
-	* elf/tic6x.h (ELF_STRING_C6000_unwind,
-	ELF_STRING_C6000_unwind_info, ELF_STRING_C6000_unwind_once,
-	ELF_STRING_C6000_unwind_info_once): Define.
-
-2011-04-30  Jakub Jelinek  <jakub@redhat.com>
-
-	* dwarf2.h (DW_OP_GNU_const_type, DW_OP_GNU_regval_type,
-	DW_OP_GNU_deref_type, DW_OP_GNU_convert, DW_OP_GNU_reinterpret): New.
-
-2011-04-25  Jan Kratochvil  <jan.kratochvil@redhat.com>
-
-	* bfdlink.h (ENUM_BITFIELD): Remove.
-
-2011-04-25  Jan Kratochvil  <jan.kratochvil@redhat.com>
-
-	* ansidecl.h (ENUM_BITFIELD): New, from gcc/system.h.
-
-2011-04-24  Alan Modra  <amodra@gmail.com>
-
-	PR ld/12365
-	PR ld/12696
-	* bfdlink.h (ENUM_BITFIELD): Define.
-	(struct bfd_link_hash_entry): Make "type" a bitfield.  Add "non_ir_ref".
-	(struct bfd_link_callbacks <notice>): Pass bfd_link_hash_entry pointer
-	rather than "name".
-
-2011-04-20  Alan Modra  <amodra@gmail.com>
-
-	PR ld/12365
-	* bfdlink.h (struct bfd_link_callbacks): Modify multiple_definition
-	and multiple_common parameters to pass in a bfd_link_hash_entry
-	pointer rather than name,bfd etc. found in the hash entry.
-
-2011-03-31  Tristan Gingold  <gingold@adacore.com>
-
-	* dwarf2.h (dwarf_line_number_hp_sfc_ops): New enum.
-
-2011-03-24  Mark Wielaard  <mjw@redhat.com>
-
-	* dwarf2.h (dwarf_form): Remove deprecated DW_FORM_sig8 define.
-
-2010-03-23  Rafael Ávila de Espíndola <respindola@mozilla.com>
-
-	* plugin-api.h (ld_plugin_get_view): New.
-	(ld_plugin_tag): Add LDPT_GET_VIEW.
-	(ld_plugin_tv): Add tv_get_view.
-
-2011-03-16  Jakub Jelinek  <jakub@redhat.com>
-
-	* dwarf2.h (DW_TAG_GNU_call_site, DW_TAG_GNU_call_site_parameter,
-	DW_AT_GNU_call_site_value, DW_AT_GNU_call_site_data_value,
-	DW_AT_GNU_call_site_target, DW_AT_GNU_call_site_target_clobbered,
-	DW_AT_GNU_tail_call, DW_AT_GNU_all_tail_call_sites,
-	DW_AT_GNU_all_call_sites,, DW_AT_GNU_all_source_call_sites,
-	DW_OP_GNU_entry_value): New.
-
-2011-02-28  Kai Tietz  <kai.tietz@onevision.com>
-
-	* filenames.h (filename_ncmp): New prototype.
-
-2011-02-23  Kai Tietz  <kai.tietz@onevision.com>
-
-	* dwarf2.h (_ELF_DWARF2_H): Renamed to
-	_DWARF2_H.
-	(DWARF2_External_LineInfo, DWARF2_Internal_LineInfo,
-	DWARF2_External_PubNames, DWARF2_Internal_PubNames,
-	DWARF2_External_CompUnit, DWARF2_Internal_CompUnit,
-	DWARF2_External_ARange, DWARF2_Internal_ARange): Removed.
-
-2011-02-08  Ulrich Weigand  <uweigand@de.ibm.com>
-
-	* dwarf2.h (enum dwarf_calling_convention): Add DW_CC_GDB_IBM_OpenCL.
-
-2011-01-12  Iain Sandoe  <iains@gcc.gnu.org>
-
-	* dwarf2.h: Update value for DW_AT_hi_user.
-
-2010-11-16  Ian Lance Taylor  <iant@google.com>
-
-	* simple-object.h (simple_object_attributes_merge): Declare,
-	replacing simple_object_attributes_compare.
-
-2010-11-04  Ian Lance Taylor  <iant@google.com>
-
-	* dwarf2.h (enum dwarf_source_language): Add DW_LANG_Go.
+	* opcode/s390.h (enum s390_opcode_cpu_val): Add S390_OPCODE_MAXCPU.
 
 2010-11-02  Ian Lance Taylor  <iant@google.com>
 
 	* simple-object.h: New file.
 
-2010-10-15  Dave Korn  <dave.korn.cygwin@gmail.com>
+2010-10-15  Dave Korn  <dave.korn.cygwin@gmail.com> 
 
 	Sync LD plugin patch series (part 1/6) with src/include/.
 	* plugin-api.h (LDPT_GNU_LD_VERSION): New ld_plugin_tag enum member.
 
-2010-10-14  Dave Korn  <dave.korn.cygwin@gmail.com>
+2010-10-14  Dave Korn  <dave.korn.cygwin@gmail.com> 
 
 	Apply LD plugin patch series (part 6/6).
 	* bfdlink.h (struct_bfd_link_callbacks): Document new argument
 	to add_archive_element callback used to return a replacement bfd which
 	is to be added to the hash table in place of the original element.
 
-2010-10-14  Dave Korn  <dave.korn.cygwin@gmail.com>
+2010-10-14  Dave Korn  <dave.korn.cygwin@gmail.com> 
 
 	Apply LD plugin patch series (part 1/6).
 	* plugin-api.h (LDPT_GNU_LD_VERSION): New ld_plugin_tag enum member.
